minor change in href

--- a/projects/soi.html
+++ b/projects/soi.html
@@ -29,4 +29,4 @@ safety guarantees.</p>
 
 <p>Slides from talks at <a href="http://mys5.org">S5</a> 2017 describing our contributions can be found here: <br /><br />
 
-<a href="../publications/slides/S5_sel4_uxas.ppt">UxAS + seL4</a></p>
+<a href="../publications/slides/S5_sel4_uxas.pptx">UxAS + seL4</a></p>
