Updated my profile

--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -10,7 +10,7 @@ location: iowa
 ---
 
 <p>
-Jennifer (Jen) Davis is a Senior Applied Mathematician in the Advanced Technology Center at Rockwell Collins. 
+Jennifer (Jen) Davis is a Principal Applied Mathematician in the Advanced Technology Center at Rockwell Collins. 
 Dr. Davis has served as the Rockwell Collins Principal Investigator for multiple U.S. DoD programs in the area of 
 formal methods. She has experience applying the <a href="/tools/spear.html">SpeAR</a> tool to document and analyze the 
 formal requirements for a new architecture. She also has experience using <a href="/tools/agree.html">AGREE</a> to 
