--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Jennifer Davis
 sort: Davis
 author_key: J. Davis
-position: Senior Applied Mathematician
+position: Principal Applied Mathematician
 picture: /images/davis.jpg
 email: jen.davis@rockwellcollins.com
 location: iowa
