--- a/publications/stewart2017imbsa.html
+++ b/publications/stewart2017imbsa.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [D. Stewart, M. Whalen, D. Cofer]
+authors: [D. Stewart, M. Whalen, D. Cofer, M. Heimdahl]
 title: "Architectural Modeling and Analysis for Safety Engineering"
 info: International Symposium on Model-Based Safety and Assessment, September 2017
 link: "pdf/stewart2017imbsa.pdf"
