--- a/projects/soi.html
+++ b/projects/soi.html
@@ -30,3 +30,6 @@ safety guarantees.</p>
 <p>Slides from talks at <a href="http://mys5.org">S5</a> 2017 describing our contributions can be found here: <br /><br />
 
 <a href="../publications/slides/S5_sel4_uxas.pptx">UxAS + seL4</a></p>
+
+<p>A video of our demonstration of UxAS + seL4 can be found here:<br /></p>
+<iframe width="560" height="315" src=""https://youtu.be/embeded/SA0Dwf8U1j8 frameborder="0" allowfullscreen></iframe>
