fixing embeded link

--- a/projects/soi.html
+++ b/projects/soi.html
@@ -32,4 +32,4 @@ safety guarantees.</p>
 <a href="../publications/slides/S5_sel4_uxas.pptx">UxAS + seL4</a></p>
 
 <p>A video of our demonstration of UxAS + seL4 can be found here:<br /></p>
-<iframe width="560" height="315" src=""https://youtu.be/embeded/SA0Dwf8U1j8 frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SA0Dwf8U1j8" frameborder="0" allowfullscreen></iframe>
