Add AGREE reference from 2017 ASE paper

--- a/publications/ghassabani2017ase.html
+++ b/publications/ghassabani2017ase.html
@@ -5,7 +5,7 @@ title: "Proof-Based Coverage Metrics for Formal Verification"
 info: Automated Software Engineering, October 2017
 link: "pdf/ghassabani2017ase.pdf"
 projects: [HACMS]
-tools: [JKind, SpeAR]
+tools: [JKind, SpeAR, AGREE]
 date: 2017-10-30 00:00:00
 ---
 
