fixing my title

--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -3,7 +3,7 @@ layout: person
 fullname: John Backes
 sort: Backes
 author_key: J. Backes
-position: Research Scientist
+position: Senior Research Scientist
 picture: /images/backes.jpg
 email: john.backes@gmail.com
 location: minnesota
