--- a/publications/cofer2017smaccm.html
+++ b/publications/cofer2017smaccm.html
@@ -2,10 +2,11 @@
 layout: publication
 authors: [D. Cofer, J. Backes, A. Gacek, D. DaCosta, M. Whalen, I. Kuz, G. Klein, G. Heiser, L. Pike, A. Foltzer, M. Podhradsky, D. Stuart, J. Grahan, B. Wilson]
 title: "Secure Mathematically-Assured Composition of Control Models"
-info: HACMS Final Report
+info: HACMS Final Report, October 2017
 link: http://www.dtic.mil/docs/citations/AD1039782
 date: 2017-10-13 00:00:00
 projects: [HACMS]
+tools: [AGREE, JKind, Resolute]
 ---
 
 The Secure Mathematically-Assured Composition of Control Models project (SMACCM) has developed new tools for building UAV software that is provably secure against many classes of cyber-attack. The goal of the project is to provide verifiable security; that is, system designs which provide the highest levels of confidence in their security based upon verifiable evidence. The SMACCM team has developed system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.
