Add AGREE, Resolute links to whalen2016ieee

--- a/publications/whalen2016ieee.html
+++ b/publications/whalen2016ieee.html
@@ -6,6 +6,7 @@ info: "IEEE Software 33(4):22-25, June 2016, doi:10.1109/MS.2016.94"
 link: "/publications/pdf/whalen2016ieee.pdf"
 date: 2016-06-25 00:00:00
 projects: [HACMS]
+tools: [AGREE, Resolute]
 ---
 
 In the High-Assurance Cyber Military Systems project, researchers are
