--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 <h1>Work with us</h1>
 <p>
 Interested in joining the Trusted Systems team at Rockwell Collins?  
-<A href="http://jobs.rockwellcollins.com/job/7821502/sr-software-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A></p>
-<p>For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
+<A href="http://jobs.rockwellcollins.com/job/7821502/sr-software-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
+<br />
+For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
 </p>
 
 <div id="news" style="visibility: hidden">
