--- a/people/lucas-wagner.html
+++ b/people/lucas-wagner.html
@@ -3,21 +3,10 @@ layout: person
 fullname: Lucas Wagner
 sort: Wagner
 author_key: L. Wagner
-position: Senior Research Scientist
+position: Principal Research Scientist
 picture: /images/wagner.jpg
 email: lucas.wagner@rockwellcollins.com
 location: iowa
 ---
 
-<p>
-Lucas Wagner is a Senior Research Scientist with Rockwell Collins’ Advanced Technology
-Center. His principal area of expertise is applying formal analysis techniques, particularly model checking, to industrial problems. His background includes developing methods and tools to integrate formal methods into industrial development processes, and design of real-time embedded systems for safety-critical applications.
-</p>
-
-<p>
-Most recently he led the <a href="/projects/fmtq.html">Formal Methods Tool Qualification (FMTQ)</a> project that investigated issues surrounding the use of formal methods tools within the DO-178C framework. This research fully explored issues regarding the qualification of theorem proving, model checking, and abstract interpretation tools. Further it investigated the concept of using proofs of correctness to enable independent verification of model checking results on the Kind 2 model checking tool.
-</p>
-
-<p>
-He is the lead developer of two formal methods based analysis tools, SpeAR and SIMPAL. SpeAR is a requirements capture and analysis tool. It features a specification language useful for capturing requirements formally and analyses to determine the accuracy and consistency of the requirements set. SIMPAL is a tool for performing compositional reasoning on imperative programs. It is able to perform assume-guarantee reasoning about programs composed of pre-existing components.
-</p>
+Lucas Wagner is a Principal Research Scientist within Rockwell Collins’ Advanced Technology Center. His area of expertise is applying formal analysis techniques, particularly model checking, to industrial problems. Mr. Wagner’s background includes developing methods and tools to facilitate the use of formal methods into industrial development processes, the certification of avionics software using model checking, and the qualification of formal methods tools. He has served as the principal investigator on NASA- and AFRL-sponsored efforts to develop and mature formal methods technologies to improve their usage within the avionics community. Mr. Wagner is also the lead developer of the SpeAR tool which is designed to aid in the development, verification, validation, and certification of software requirements according to the guidelines set forth in DO-178C.
