Move John Backes to Alumni

--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -6,7 +6,7 @@ author_key: J. Backes
 position: Senior Research Scientist
 picture: /images/backes.jpg
 email: john.backes@gmail.com
-location: minnesota
+location: alumni
 ---
 
 <p>John Backes is a Senior Research Scientist at the Rockwell Collins Advanced Technology Center. He earned his PhD from the Department of Electrical and Computer Engineering at the University of Minnesota.  He is the principle developer of AGREE, a compositional verification tool for AADL models.  He was a member of the air vehicle team in DARPA's High Assurance Cyber Military Systems program. He has also been a performer on projects funded by NASA, AFRL, and the Army. He is currently working on verification of AFRL's UxAS as part of the Summer of Innovation.  His research interests include SMT-Solving, Model Checking, Formalization of Requirements, Verification of Software for Embedded Systems, and Logic Synthesis.</p>
