--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 Interested in joining the Trusted Systems team at Rockwell Collins?  
 <A href="http://jobs.rockwellcollins.com/job/7821502/sr-software-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
 <br />
-For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
+We're also hiring summer interns.  For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
 </p>
 
 <div id="news" style="visibility: hidden">
