Alumni update -- you beat me to it.

--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -39,6 +39,11 @@ language translation, software design, operating systems, and embedded
 systems.
 </p>
 
+<div id="quad-quote">
+<img src="/images/quad-small.jpg" />
+</div>
+
+
 <!--  LocalWords:  fullname Gacek minnesota INRIA Saclay SpeAR SIMPAL
  -->
 <!--  LocalWords:  Abella
