--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 
 <h1>Work with us</h1>
 <p>
+Job &#8712 {FormalMethods &#8745 Airplanes} &#8658 Cool(Job) <br>
 Interested in joining the Trusted Systems team at Rockwell Collins?  
 <A href="http://jobs.rockwellcollins.com/job/7821502/sr-software-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
 <br />
