Updated SpeAR page to mention Rockwell Collins and AFRL collaboration.

--- a/tools/spear.html
+++ b/tools/spear.html
@@ -13,3 +13,5 @@ The Specification and Analysis of Requirements (SpeAR) tool is a tool for protot
 <p>
 Once formalized, SpeAR will translate the specification to an equivalent Lustre model and analyze that the derived requirements permit (or prohibit) certain desired (or undesired) behaviors. It also supports the ability to check a specification for logical consistency and realizability, which help identify logical conflicts and unrealizable conditions.
 </p>
+
+<p>SpeAR was developed by Rockwell Collins in collaboration with AFRL and under AFRL funding.</p>
