Changed title to mixed case

--- a/publications/cofer2013fmics.html
+++ b/publications/cofer2013fmics.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 authors: [J. Davis, M. Clark, D. Cofer, A. Fifarek, J. Hinchman, J. Hoffman, B. Hulbert, S. Miller, L. Wagner]
-title: "Study on the barriers to the industrial adoption of formal methods"
+title: "Study on the Barriers to the Industrial Adoption of Formal Methods"
 info: FMICS 2013
 link: "pdf/cofer2013fmics.pdf"
 date: 2013-09-23 00:00:00
