Added link to SMACCM github repo

--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -34,6 +34,8 @@ These tools for secure software development and analysis are available for trans
 
 <p>At the end of each phase of the project, the HACMS Red Team was given six weeks and full access to the source code for both vehicles to evaluate their cyber security claims.  They were unable to compromise the security of either vehicle. </p>
 
+<p>All of the models, software, and tools developed as part of this project are open source and available in the <A href="https://github.com/smaccm"> SMACCM github repository</A>. </p>
+
 <p>Phase 3 final demonstration, including cyber attacks on the research quadcopter and video about the Boeing ULB final demonstration.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sa3lnRX7CBw" frameborder="0" allowfullscreen></iframe>
 <p>HACMS program explainer.  This provides a nice overview of the technologies and accomplishments.</p>
