updated job link

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 <p>
 Job &#8712 {FormalMethods &#8745 Airplanes} &#8658 Cool(Job) <br>
 Interested in joining the Trusted Systems team at Rockwell Collins?  
-<A href="http://jobs.rockwellcollins.com/job/7821502/sr-software-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
+<A href="https://jobs.rockwellcollins.com/job/8167061/pr-systems-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
 <br />
-We're also hiring summer interns.  For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
+For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
 </p>
 
 <div id="news" style="visibility: hidden">
