--- a/publications/davis2018.html
+++ b/publications/davis2018.html
@@ -1,8 +1,8 @@
 ---
 layout: publication
 authors: [J. Davis, D. Kingston, L. Humphrey]
-title: "When human intuition fails: using formal methods to find an error in the 'proof' of a multi-agent protocol"
-info: 
+title: "When Human Intuition Fails: Using Formal Methods to Find an Error in the 'Proof' of a Multi-Agent Protocol"
+info: Preprint
 link: "pdf/davis2018.pdf"
 date: 2018-09-20 00:00:00
 ---
