--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <h1>About us</h1>
 <p>
-Loonwerks is a finite set of formal methods researchers based in the <A href="https://www.google.com/maps/place/7805+Telegraph+Rd,+Minneapolis,+MN+55438/@44.8608324,-93.3833626,15z/">Minneapolis office</A> of Rockwell Collins.  We are part of the Trusted Systems group in the Advanced Technology Center.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
+Loonwerks is a finite set of formal methods researchers based in the <A href="https://www.google.com/maps/place/7805+Telegraph+Rd,+Minneapolis,+MN+55438/@44.8608324,-93.3833626,15z/">Minneapolis office</A> of the Trusted Systems group in Collins Aerospace.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
 </p>
 
 <h1>Work with us</h1>
