--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -1,17 +1,17 @@
----
+﻿---
 layout: person
 fullname: Jennifer Davis
 sort: Davis
 author_key: J. Davis
 position: Principal Applied Mathematician
 picture: /images/davis.jpg
-email: jen.davis@rockwellcollins.com
+email: jen.davis@collins.com
 location: iowa
 ---
 
 <p>
-Jennifer (Jen) Davis is a Principal Applied Mathematician in the Advanced Technology Center at Rockwell Collins. 
-Dr. Davis has served as the Rockwell Collins Principal Investigator for multiple U.S. DoD programs in the area of 
+Jennifer (Jen) Davis is a Principal Applied Mathematician in the Trusted Systems group at Collins Aerospace.
+Dr. Davis has served as the company's Principal Investigator for multiple U.S. DoD programs in the area of 
 formal methods. She has experience applying the <a href="/tools/spear.html">SpeAR</a> tool to document and analyze the 
 formal requirements for a new architecture. She also has experience using <a href="/tools/agree.html">AGREE</a> to 
 formalize an instantiation of the simplex architecture together with its requirements. 
