OK. I *think* I've fixed it this time. Had to change my UltraEdit settings to not write the UTF-8 BOM.

--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -1,4 +1,4 @@
-﻿---
+---
 layout: person
 fullname: Jennifer Davis
 sort: Davis
@@ -20,7 +20,7 @@ formalize an instantiation of the simplex architecture together with its require
 <p>
 Dr. Davis has experience with state of the art theorem proving tools. She jointly developed a translator from LLVM to ACL2 
 to enable verification of system properties. She also used PVS to complete correctness proofs 
-for the <a href="/projects/do333.html">DO-333</a> theorem proving case study.  In addition to Dr. Davis’s formal methods 
+for the <a href="/projects/do333.html">DO-333</a> theorem proving case study.  In addition to Dr. Davis's formal methods 
 skills, she has experience with cryptography, error-correcting codes, image processing, model-based engineering, and 
 cybersecurity. She earned her Ph.D. in Mathematics at the University of Nebraska at Lincoln in 2007.
 </p>
