Update job link. Add CASE project. Archive older projects.

--- a/projects/soi.html
+++ b/projects/soi.html
@@ -3,7 +3,7 @@ layout: project
 shortname: SoI
 longname: Air Force Research Lab's Summer of Innovation
 sort: 2017
-archive: no
+archive: yes
 ---
 
 <p> During the summer of 2017 we participated in Air Force Research
