--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 <h1>Work with us</h1>
 <p>
 Job &#8712 {FormalMethods &#8745 Airplanes} &#8658 Cool(Job) <br>
-Interested in joining the Trusted Systems team at Rockwell Collins?  
-<A href="https://jobs.rockwellcollins.com/job/8167061/pr-systems-engineer-trusted-systems-cedar-rapids-ia/">Apply here.</A>
+Interested in joining the Trusted Systems team at Collins?  
+<A href="https://jobs.collinsaerospace.com/job/cedar-rapids/principal-trusted-systems-engineer/1738/10400019">Apply here.</A>
 <br />
 For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
 </p>
