--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Loonwerks is a finite set of formal methods researchers based in the <A href="ht
 <p>
 Job &#8712 {FormalMethods &#8745 Airplanes} &#8658 Cool(Job) <br>
 Interested in joining the Trusted Systems team at Collins?  
-<A href="https://jobs.collinsaerospace.com/job/cedar-rapids/principal-trusted-systems-engineer/1738/10400019">Apply here.</A>
+<A href="https://jobs.collinsaerospace.com/job/cedar-rapids/principal-trusted-systems-engineer/1738/10400019" target="_blank">Apply here.</A>
 <br />
 For additional information contact us at <A href="mailto:info@loonwerks.com">info@loonwerks.com</A> 
 </p>
