--- a/projects/case.html
+++ b/projects/case.html
@@ -13,7 +13,7 @@ designing complex embedded computing systems. Cyber resiliency means that the sy
 is tolerant to cyberattacks in the same way that safety critical systems are tolerant to
 random faults – they recover and continue to execute their mission function.</p>
 
-<p>Collins Aerospace, Data61 and The University of Kansas have teamed to provide a
+<p>Collins Aerospace, Data61, and The University of Kansas have teamed to provide a
 comprehensive solution to the Design Resiliency objectives for Technical Area 2 of the CASE program.
 We are pursuing four technology development thrusts:
 <ul>
@@ -32,5 +32,5 @@ systems.  This effort will leverage our expertise in industrial application of f
 development of complex military vehicles, formally verified operating system components,
 and formal design languages and synthesis.</p>
 
-<p>Models and code for the project are available on <a href="https://github.com/loonwerks/CASE">github</a>. </p>
+<p>Models and code for the project are available on <a href="https://github.com/loonwerks/CASE" target="_blank">github</a>. </p>
 
