--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ For additional information contact us at <A href="mailto:info@loonwerks.com">inf
 
 <p id="disclaimer">
 Loonwerks is solely responsible for the content of this web site. Such
-content does not necessarily represent the views of Rockwell Collins.
+content does not necessarily represent the views of Collins Aerospace.
 </p>
 
 <script type="text/javascript">
