--- a/projects/case.html
+++ b/projects/case.html
@@ -2,11 +2,11 @@
 layout: project
 shortname: CASE
 longname: Cyber Assured Systems Engineering
-sort: 2018.1
+sort: 2018
 archive: no
 ---
 
-<p>The goal of DARPA’s Cyber Assured Systems Engineering (CASE) program is to develop the
+<p>The goal of DARPA's Cyber Assured Systems Engineering (CASE) program is to develop the
 necessary design, analysis and verification tools to allow system engineers to design-in
 cyber resiliency and manage tradeoffs as they do the other nonfunctional properties when
 designing complex embedded computing systems. Cyber resiliency means that the system
