--- a/projects/case.html
+++ b/projects/case.html
@@ -9,9 +9,9 @@ archive: no
 <p>The goal of DARPA's Cyber Assured Systems Engineering (CASE) program is to develop the
 necessary design, analysis and verification tools to allow system engineers to design-in
 cyber resiliency and manage tradeoffs as they do the other nonfunctional properties when
-designing complex embedded computing systems. Cyber resiliency means that the system
-is tolerant to cyberattacks in the same way that safety critical systems are tolerant to
-random faults – they recover and continue to execute their mission function.</p>
+designing complex embedded computing systems. Cyber-resiliency means that the system
+is tolerant to cyberattacks in the same way that safety-critical systems are tolerant to
+random faults - they recover and continue to execute their mission function.</p>
 
 <p>Collins Aerospace, Data61, and The University of Kansas have teamed to provide a
 comprehensive solution to the Design Resiliency objectives for Technical Area 2 of the CASE program.
