External links open in new tab.

--- a/projects/aahaa.html
+++ b/projects/aahaa.html
@@ -21,5 +21,5 @@ archive: no
 <li>Assurance-optimized system test generation informed by analysis results </li>
 </ul></p>
 
-<p>Models and code for the project are available on <a href="https://github.com/loonwerks/AAHAA">github</a>. </p>
+<p>Models and code for the project are available on <a href="https://github.com/loonwerks/AAHAA" target="_blank">github</a>. </p>
 
