--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -30,11 +30,11 @@ archive: no
 </ul>
 
 <p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our integrated tools for architectural modeling, analysis, and synthesis (shown in the figure) make this approach practical and effective.
-These tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).  </p>
+These tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html" target="_blank"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html" target="_blank"> Resolute</A>).  </p>
 
 <p>At the end of each phase of the project, the HACMS Red Team was given six weeks and full access to the source code for both vehicles to evaluate their cyber security claims.  They were unable to compromise the security of either vehicle. </p>
 
-<p>All of the models, software, and tools developed as part of this project are open source and available in the <A href="https://github.com/smaccm"> SMACCM github repository</A>.  Details on construction of the research quadcopter can be found at <A href="https://smaccmpilot.org/"> smaccmpilot.org</A>.  More information is available in the project <A href="http://loonwerks.com/publications/cofer2017smaccm.html"> final report</A>. </p>
+<p>All of the models, software, and tools developed as part of this project are open source and available in the <A href="https://github.com/smaccm" target="_blank"> SMACCM github repository</A>.  Details on construction of the research quadcopter can be found at <A href="https://smaccmpilot.org/" target="_blank"> smaccmpilot.org</A>.  More information is available in the project <A href="http://loonwerks.com/publications/cofer2017smaccm.html"> final report</A>. </p>
 
 <p>Phase 3 final demonstration, including cyber attacks on the research quadcopter and video about the Boeing ULB final demonstration.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sa3lnRX7CBw" frameborder="0" allowfullscreen></iframe>
