--- a/publications/cofer2014nasacr.html
+++ b/publications/cofer2014nasacr.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [D. Cofer, S. Miller]
 title: "Formal Methods Case Studies for DO-333"
 info: NASA Contractor Report NASA/CR-2014-218244, 2014
-link: "http://shemesh.larc.nasa.gov/people/bld/ftp/NASA-CR-2014-218244.pdf"
+link: "pdf/NASA-CR-2014-218244.pdf"
 date: 2014-04-01 00:00:00
 projects: [DO-333]
 ---
