image and profile update

--- a/people/david-greve.html
+++ b/people/david-greve.html
@@ -3,8 +3,8 @@ layout: person
 fullname: David Greve
 sort: Greve
 author_key: D. Greve
-position: Principal Research Scientist
-picture: /images/wagner.jpg
+position: Associate Director Engineer
+picture: /images/greve.png
 email: david.greve@collins.com
 location: iowa
 ---
