Breaking up paragraphs.

--- a/people/junaid-babar.html
+++ b/people/junaid-babar.html
@@ -13,6 +13,9 @@ location: iowa
 Junaid Babar is a Senior Systems Engineer in the Trusted Systems group at Collins Aerospace.
 His main areas of reasearch are decision diagrams, symbolic model checking, temporal logics and Petri nets,
 and he is passionate about making formal methods more accessible.
+</p>
+
+<p>
 Dr. Babar's recent research, Binary Decision Diagrams with Edge-Specified Reductions (ESRBDDs),
 has been recognized as a significant advance in the evolution of decision diagrams.
 He has been a significant contributor to MEDDLY, an open-source decision diagram library,
@@ -20,8 +23,11 @@ and SMART, a symbolic model checker.
 His interest in formal methods and their applications arose from a stint at Intel's ATCA division,
 where he was involved in the verification of a telecommunication rack server.
 At Collins Aerospace, he has most recently been involved in the DARPA CASE program (TA2 and TA5).
+</p>
+
+<p>
 Dr. Babar was conferred a PhD in Computer Science from Iowa State University
-and a BE in Computer Science and Engineering from the University of Madras.
-and counts himself as an avid cricketer.
+and a BE in Computer Science and Engineering from the University of Madras,
+and he counts himself as an avid cricketer.
 </p>
 
