--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -54,6 +54,6 @@ These tools for secure software development and analysis are available for trans
 <iframe width="360" height="202" src="https://www.youtube.com/embed/4oONdV5RYp8" frameborder="0" allowfullscreen></iframe>
 <p>A nice overview of Phase 1 of the project from our partners at Data61:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/8fzyNSUbGuY" frameborder="0" allowfullscreen></iframe>
-<p>Phase 1 overview form our partners at Galois:</p>
+<p>Phase 1 overview from our partners at Galois:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/uMB10QCxudY" frameborder="0" allowfullscreen></iframe>
 
