--- a/publications/cofer2020nfm.html
+++ b/publications/cofer2020nfm.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [D. Cofer, I. Amundson, R. Sattigeri1, A. Passi, C. Boggs, E. Smith, L. Gilham, T. Byun, S. Rayadurgam]
+authors: [D. Cofer, I. Amundson, R. Sattigeri, A. Passi, C. Boggs, E. Smith, L. Gilham, T. Byun, S. Rayadurgam]
 title: "Run-Time Assurance for Learning-Enabled Systems"
 info: NASA Formal Methods Symposium, May 2020
 link: "/publications/pdf/cofer2020nfm.pdf"
