--- a/publications/cofer2020nfm.html
+++ b/publications/cofer2020nfm.html
@@ -3,6 +3,7 @@ layout: publication
 authors: [D. Cofer, I. Amundson, R. Sattigeri, A. Passi, C. Boggs, E. Smith, L. Gilham, T. Byun, S. Rayadurgam]
 title: "Run-Time Assurance for Learning-Enabled Systems"
 info: NASA Formal Methods Symposium, May 2020
+slides: "https://youtu.be/2h1_wLfNuaA"
 link: "/publications/pdf/cofer2020nfm.pdf"
 date: 2020-05-01 00:00:00
 projects: [AAHAA]
