--- a/tools/agree.html
+++ b/tools/agree.html
@@ -2,8 +2,8 @@
 layout: tool
 toolname: AGREE
 summary: Assume Guarantee Reasoning Environment
-sourcecode: "https://github.com/smaccm/smaccm"
-download: "https://github.com/smaccm/smaccm/releases"
+sourcecode: "https://github.com/loonwerks/AGREE"
+download: "https://github.com/loonwerks/AGREE/releases"
 ---
 
 <p>
