--- a/tools/resolute.html
+++ b/tools/resolute.html
@@ -2,8 +2,8 @@
 layout: tool
 toolname: Resolute
 summary: An assurance case language for architecture models
-sourcecode: "https://github.com/smaccm/smaccm"
-download: "https://github.com/smaccm/smaccm/releases"
+sourcecode: "https://github.com/loonwerks/Resolute"
+download: "https://github.com/loonwerks/Resolute/releases"
 ---
 
 <p>
