Update repo links

--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -2,8 +2,8 @@
 layout: tool
 toolname: JKind
 summary: An infinite-state model checker for safety properties
-sourcecode: "https://github.com/agacek/jkind"
-download: "https://github.com/agacek/jkind/releases"
+sourcecode: "https://github.com/loonwerks/jkind"
+download: "https://github.com/loonwerks/jkind/releases"
 ---
 
 <p>
