Rockwell Collins -> Collins Aerospace

--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -20,7 +20,7 @@ violation.
 
 <p>
 JKind is used as the back-end model checker for many projects and
-tools at Rockwell Collins
+tools at Collins Aerospace,
 including <a href="/tools/agree.html">AGREE</a>, <a href="/tools/spear.html">SpeAR</a>,
 and
 <a href="https://github.com/lgwagner/SIMPAL">SIMPAL</a>. JKind is also
@@ -55,5 +55,5 @@ Lustre code. It also runs JKind and reports the results graphically.
 </p>
 
 <p>
-JKind is primarily developed by <a href="/people/andrew-gacek.html">Andrew Gacek</a>.
+JKind was primarily developed by <a href="/people/andrew-gacek.html">Andrew Gacek</a> and is maintained by Loonwerks.
 </p>
