Rockwell Collins -> Collins Aerospace

--- a/people/darren-cofer.html
+++ b/people/darren-cofer.html
@@ -9,10 +9,10 @@ picture: /images/cofer.jpg
 location: minnesota
 ---
 
-<p>Darren Cofer is a Fellow at the Rockwell Collins Advanced Technology Center.  He earned his PhD in Electrical and Computer Engineering from The University of Texas at Austin.  </p>
+<p>Darren Cofer is a Fellow at Collins Aerospace.  He earned his PhD in Electrical and Computer Engineering from The University of Texas at Austin.  </p>
 
 <p>His principal area of expertise is developing and applying advanced analysis methods and tools for verification and certification of high-integrity systems.  His background includes work with formal methods for system and software analysis, the design of real-time embedded systems for safety-critical applications, and the development of <A href="http://nnsa.energy.gov/aboutus/ourprograms/powernavy2/aboutnr"> nuclear propulsion systems</A> in the U.S. Navy. </p> 
 
-<p>He has served as principal investigator on government-sponsored research programs with NASA, NSA, AFRL, and DARPA, developing and using formal methods for verification of safety and security properties. He is currently the principal investigator for Rockwell Collins teams working on DARPA's Cyber Assured Systems Engineering (CASE) and Assured Autonomy programs.  </p>
+<p>He has served as principal investigator on government-sponsored research programs with NASA, NSA, AFRL, and DARPA, developing and using formal methods for verification of safety and security properties. He is currently the principal investigator for Collins teams working on DARPA's Cyber Assured Systems Engineering (CASE) and Assured Autonomy programs.  </p>
 
 <p>Dr. Cofer served on RTCA committee SC-205 developing new certification guidance for airborne software <A href="http://www.rtca.org/store_product.asp?prodid=803">(DO-178C)</A> and was one of the developers of the Formal Methods Supplement (DO-333).  He is a member of the <A href="http://www.rtca.org/content.asp?pl=33&sl=170&contentid=170">RTCA Forum for Aeronautical Software</A>, the <A href="http://acgsc.org">Aerospace Control and Guidance Systems Committee (ACGSC)</A>, and a senior member of the IEEE. </p>
