--- a/people/isaac-amundson.html
+++ b/people/isaac-amundson.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Isaac Amundson
 sort: Amundson
 author_key: I. Amundson
-email: isaac.amundson@rockwellcollins.com
+email: isaac.amundson@collins.com
 position: Researcher
 picture: /images/amundson.jpg
 location: minnesota
