--- a/people/david-greve.html
+++ b/people/david-greve.html
@@ -13,7 +13,7 @@ location: iowa
 David Greve is an Associate Director Engineer in the Advanced
 Technology Center at Collins Aerospace.  David specializes in
 constructing and reasoning about formal models of computer systems.
-He as instrumental in the formal analysis of the AAMP7 intrinsic
+He was instrumental in the formal analysis of the AAMP7 intrinsic
 partitioning mechanism and the Green Hills INTEGRITY-178B in support
 of their respective MILS certifications.  He was the principal
 investigator on the NSA vFaat effort to structure and automate proofs
