--- a/publications/liu2016nfm.html
+++ b/publications/liu2016nfm.html
@@ -5,6 +5,7 @@ title: "From Design Contracts to Component Requirements Verification"
 info: NASA Formal Methods Symposium, June 2016
 link: "https://arxiv.org/pdf/1603.02130"
 projects: [CVFCS]
+tools: [AGREE]
 date: 2016-06-07 00:00:00
 ---
 
