Add tool demo video

--- a/projects/case.html
+++ b/projects/case.html
@@ -34,3 +34,6 @@ and formal design languages and synthesis.</p>
 
 <p>Models and code for the project are available on <a href="https://github.com/loonwerks/CASE" target="_blank">github</a>. </p>
 
+<p>This video provides a demonstration of the BriefCASE tool environment that we have developed.  It shows how to use the tools to address multiple cyber-resiliency requirements for a UAV mission computing system.</p>
+
+<iframe width="720" height="300" src="https://www.youtube.com/embed/sOVs959q_lI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
