--- a/projects/case.html
+++ b/projects/case.html
@@ -32,7 +32,7 @@ systems.  This effort will leverage our expertise in industrial application of f
 development of complex military vehicles, formally verified operating system components,
 and formal design languages and synthesis.</p>
 
-<p>Models and code for the project are available on <a href="https://github.com/loonwerks/CASE" target="_blank">github</a>. </p>
+<p>Tools developed on the CASE project are available on <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">github</a>. AADL models based on an experimental UAV application are available <a href="https://github.com/loonwerks/case-ta6-experimental-platform-models" target="_blank">here</a>. </p>
 
 <p>This video provides a demonstration of the BriefCASE tool environment that we have developed.  It shows how to use the tools to address multiple cyber-resiliency requirements for a UAV mission computing system.</p>
 
