--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ For additional information contact us at <A href="mailto:info@loonwerks.com">inf
 
 <p id="disclaimer">
 Loonwerks is solely responsible for the content of this web site. Such
-content does not necessarily represent the views of Collins Aerospace.
+content does not necessarily represent the views of Collins Aerospace.  
+All content has been approved for public release. 
 </p>
 
 <script type="text/javascript">
