--- a/projects/case.html
+++ b/projects/case.html
@@ -37,3 +37,8 @@ and formal design languages and synthesis.</p>
 <p>This video provides a demonstration of the BriefCASE tool environment that we have developed.  It shows how to use the tools to address multiple cyber-resiliency requirements for a UAV mission computing system.</p>
 
 <iframe width="720" height="450" src="https://www.youtube.com/embed/sOVs959q_lI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>In part two, we run the hardened UAV mission computing system built in the first video and test it against several cyber attacks to show the effectiveness of the approach.  
+</p>
+
+<iframe width="720" height="450" src="https://www.youtube.com/embed/Ue0HHdL52-w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
