update link for HACMS final report

--- a/publications/cofer2017smaccm.html
+++ b/publications/cofer2017smaccm.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [D. Cofer, J. Backes, A. Gacek, D. DaCosta, M. Whalen, I. Kuz, G. Klein, G. Heiser, L. Pike, A. Foltzer, M. Podhradsky, D. Stuart, J. Grahan, B. Wilson]
 title: "Secure Mathematically-Assured Composition of Control Models"
 info: HACMS Final Report, October 2017
-link: http://www.dtic.mil/docs/citations/AD1039782
+link: https://apps.dtic.mil/sti/pdfs/AD1039782.pdf
 date: 2017-10-13 00:00:00
 projects: [HACMS]
 tools: [AGREE, JKind, Resolute]
