Updating my (Jen's) bio

--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -10,17 +10,5 @@ location: iowa
 ---
 
 <p>
-Jennifer (Jen) Davis is a Principal Applied Mathematician in the Trusted Systems group at Collins Aerospace.
-Dr. Davis has served as the company's Principal Investigator for multiple U.S. DoD programs in the area of 
-formal methods. She has experience applying the <a href="/tools/spear.html">SpeAR</a> tool to document and analyze the 
-formal requirements for a new architecture. She also has experience using <a href="/tools/agree.html">AGREE</a> to 
-formalize an instantiation of the simplex architecture together with its requirements. 
-</p>
-
-<p>
-Dr. Davis has experience with state of the art theorem proving tools. She jointly developed a translator from LLVM to ACL2 
-to enable verification of system properties. She also used PVS to complete correctness proofs 
-for the <a href="/projects/do333.html">DO-333</a> theorem proving case study.  In addition to Dr. Davis's formal methods 
-skills, she has experience with cryptography, error-correcting codes, image processing, model-based engineering, and 
-cybersecurity. She earned her Ph.D. in Mathematics at the University of Nebraska at Lincoln in 2007.
+Jennifer (Jen) Davis is Chief Technologist for the Model Based Systems Engineering Discipline Team in the Applied Research & Technology organization at Collins Aerospace. Dr. Davis has served as the Collins Aerospace principal investigator for several government-sponsored research programs on developing and applying high-assurance, model-based approaches to the verification and validation of autonomous systems. She chairs the Model Based Systems Engineering Working Group at Collins. Dr. Davis has worked for Collins Aerospace for fourteen years and has published seven papers. She holds a five patents and a Ph.D. in Mathematics from the University of Nebraska at Lincoln.
 </p>
