fixing paper link

--- a/publications/davis2021.html
+++ b/publications/davis2021.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [K. Hobbs, J. Davis, L. Wagner, E. Feron]
 title: "Formal Specification and Analysis of Spacecraft Collision Avoidance Run Time Assurance Requirements"
 info: 2021 IEEE Aerospace Conference
-link: "https://link.springer.com/chapter/10.1007/978-3-030-25540-4_20"
+link: "https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9438135"
 date: 2021-03-06 00:00:00
 ---
 
