--- a/publications/amundson2021destion.html
+++ b/publications/amundson2021destion.html
@@ -6,6 +6,7 @@ info: Design Automation for CPS and IoT (DESTION 2021), May 2021
 link: "/publications/pdf/amundson2021destion.pdf"
 date: 2021-05-18 00:00:00
 projects: [CASE]
+tools: [Resolute]
 ---
 
 Resolute is a tool and language for embedding an assurance argument
