--- a/publications/cofer2021defcon.html
+++ b/publications/cofer2021defcon.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
 authors: [D. Cofer, I. Amundson, E. Barker, E. Hellman]
-title: "Steal This Drone: Aerospace Village DEFCON29 Activity"
+title: "Steal This Drone: DEFCON29 Aerospace Village Activity"
 info: DEFCON Aerospace Village, August 2021
 slides: "https://youtu.be/eWtqmUl-O-Q"
 link: "/publications/pdf/Steal-This-Drone-README.pdf"
