--- a/publications/cofer2021defcon.html
+++ b/publications/cofer2021defcon.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [D. Cofer, I. Amundson, E. Barker, E. Hellman]
+authors: [D. Cofer, I. Amundson, E. Barker, E. Hellman, M. Podhradsky, S. Zhuang]
 title: "Steal This Drone: DEFCON29 Aerospace Village Activity"
 info: DEFCON Aerospace Village, August 2021
 slides: "https://youtu.be/eWtqmUl-O-Q"
