--- a/publications/hardin2020syscon.html
+++ b/publications/hardin2020syscon.html
@@ -10,9 +10,9 @@ projects: [CASE]
 
 <p>Experienced developers of safety-critical and
 security-critical systems have long emphasized the importance
-of applying the highest degree of scrutiny to a system’s I/O
+of applying the highest degree of scrutiny to a system's I/O
 boundaries. From a safety perspective, input validation is a
-traditional “best practice.” For security-critical architecture and
+traditional "best practice." For security-critical architecture and
 design, identification of the attack surface has emerged as a
 primary analysis technique. One of our current research focus
 areas concerns the identification of and mitigation against attacks
@@ -37,7 +37,7 @@ expressed in a subset of Algorithmic C, which defines a set of C++
 header files providing support for hardware design, including
 the peculiar bit widths utilized in that discipline, and enables
 compilation to both hardware and software platforms. The
-Russinoff-O’Leary Restricted Algorithmic C (RAC) toolchain
+Russinoff-O'Leary Restricted Algorithmic C (RAC) toolchain
 translates Algorithmic C source to the Common Lisp subset
 supported by the ACL2 theorem prover; once in ACL2, filter
 behavior can be mathematically verified. We describe how we
