--- a/publications/hardin2021langsec.html
+++ b/publications/hardin2021langsec.html
@@ -10,7 +10,7 @@ projects: [CASE]
 
 <p>Safety- and security-critical developers have long
 recognized the importance of applying a high degree of scrutiny
-to a system’s (or subsystem’s) I/O messages. However, lack of
+to a system's (or subsystem's) I/O messages. However, lack of
 care in the development of message-handling components can
 lead to an increase, rather than a decrease, in the attack surface.
 On the DARPA Cyber-Assured Systems Engineering (CASE)
@@ -23,7 +23,7 @@ highly compatible with the goals of the LangSec community.
 Advances in formal methods have allowed us to produce
 hardware/software implementations that are both performant
 and guaranteed correct. With these tools, we can synthesize
-high-assurance “building blocks” that can be composed automatically
+high-assurance "building blocks" that can be composed automatically
 with high confidence to create trustworthy systems,
 using a method we call Security-Enhancing Architectural Transformations.
 Our synthesis-focused approach provides a higherleverage
