--- a/publications/mercer2021models.html
+++ b/publications/mercer2021models.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [E. Mercer, K. Slind, I. Amundson, D. Cofer, J. Babar, D. Hardin]
 title: "Synthesizing Verified Components for Cyber Assured Systems Engineering"
-info: MODELS, 2021
+info: MODELS, October 2021
 link: "/publications/pdf/mercer2021MODELS.pdf"
 date: 2021-10-14 00:00:00
 projects: [CASE]
@@ -28,7 +28,7 @@ the specifications all the way down to the binary code level.
 The model transformations are integrated into the Open Source
 AADL Tool Environment (OSATE). The paper further reports on
 a case study applying security-enhancing model transformations
-to a UAV system that uses the Air Force Research Laboratory’s
+to a UAV system that uses the Air Force Research Laboratory's
 OpenUxAS services for route planning. In the case study, the
 model transformations add filters to guard against malformed
 input, as well as monitors to guard against ground station
